CSS tweak to fix some overflow on homepage long welcome message

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -494,6 +494,10 @@ td, th {
 	overflow-wrap: anywhere;
 }
 
+td pre {
+    overflow-wrap: anywhere;
+}
+
 .flex-center {
 	align-items: center;
 }
